# Something-I-Did-Today

./: .gitignore  Cargo.toml  LICENSE  README.md  main.rs
resources/: settings.json
sidt/: Cargo.toml
sidt/src/: db.rs  dbinit.rs  main.rs
src/: db.rs  lib.rs  main.rs  settings.rs
