[package]
name = "sidt"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "sidt"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
sqlite = "0.36.0"
rustyline = "14.0"
serde_json = "1.0.141"
serde_derive = "1.0.219"
serde = { version = "1.0", features = ["derive"] }
colored = "3.0.0"
